unpackaged/main/default/objects/Invoice__c/fields/Adjustment_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Description__c</fullName>
    <formula>Facility_Adjustment__r.ACG_Description__c</formula>
    <label>Adjustment Description</label>
    <type>Text</type>
</CustomField>