unpackaged/main/default/objects/Invoice__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <description>Call Date from Work Order - typically used with SVC tickets</description>
    <formula>Work_Order__r.Call_Date__c</formula>
    <label>Call Date</label>
    <type>Text</type>
</CustomField>