unpackaged/main/default/objects/Invoice__c/fields/Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Number__c</fullName>
    <formula>Work_Order__r.WorkOrderNumber</formula>
    <label>(Deprecate?) Call Number</label>
    <type>Text</type>
</CustomField>