unpackaged/main/default/objects/Invoice__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <formula>Work_Order__r.Program_Description__c</formula>
    <label>Club</label>
    <type>Text</type>
</CustomField>