unpackaged/main/default/objects/Invoice__c/fields/En_Route_Mileage__c.field-meta.xml
<CustomField>
    <fullName>En_Route_Mileage__c</fullName>
    <label>En-Route Mileage</label>
    <summarizedField>Invoice_Line_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Code__c</field>
        <operation>equals</operation>
        <value>OM</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>