unpackaged/main/default/objects/Invoice__c/fields/Facility_Adj_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adj_Start_Date__c</fullName>
    <formula>Facility_Adjustment__r.ACG_Start_Date__c</formula>
    <label>Facility Adj Start Date</label>
    <type>Date</type>
</CustomField>