unpackaged/main/default/objects/Invoice__c/fields/Facility_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Adjustment</label>
    <referenceTo>ACG_Facility_Adjustment__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>