unpackaged/main/default/objects/Invoice__c/fields/Facility_Adjustment_Category__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment_Category__c</fullName>
    <label>Facility Adjustment Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>