unpackaged/main/default/objects/Invoice__c/fields/Facility_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment_Type__c</fullName>
    <label>Facility Adjustment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>