unpackaged/main/default/objects/Invoice__c/fields/Number_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Line_Items__c</fullName>
    <label>Number of Line Items</label>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>