unpackaged/main/default/objects/Invoice__c/fields/Premier_Cost_Tax__c.field-meta.xml
<CustomField>
    <fullName>Premier_Cost_Tax__c</fullName>
    <label>Premier Cost Tax</label>
    <summarizedField>Invoice_Line_Item__c.Tax__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Charge_to_Account__c</field>
        <operation>equals</operation>
        <value>E</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>