unpackaged/main/default/objects/Invoice__c/fields/Reciprocal_Sync_Ready__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Sync_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, will update an associated Reciprocal or create a new outgoing Reciprocal if none exists.</description>
    <inlineHelpText>When checked, will update an associated Reciprocal or create a new outgoing Reciprocal if none exists.</inlineHelpText>
    <label>Reciprocal Sync Ready</label>
    <type>Checkbox</type>
</CustomField>