unpackaged/main/default/objects/Invoice__c/fields/RV_Cost__c.field-meta.xml
<CustomField>
    <fullName>RV_Cost__c</fullName>
    <label>RV Cost</label>
    <summarizedField>Invoice_Line_Item__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Charge_to_Account__c</field>
        <operation>equals</operation>
        <value>R</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>