unpackaged/main/default/objects/Invoice__c/fields/Statement_Status__c.field-meta.xml
<CustomField>
    <fullName>Statement_Status__c</fullName>
    <formula>TEXT(Statement__r.Status__c)</formula>
    <label>Statement Status</label>
    <type>Text</type>
</CustomField>