unpackaged/main/default/objects/Invoice__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>This is the ticket number from the Work Order typically used in SVC Tickets</description>
    <formula>Work_Order__r.Ticket_Number__c</formula>
    <label>Ticket Number</label>
    <type>Text</type>
</CustomField>