unpackaged/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERS Calls</fullName>
            </value>
            <value>
                <fullName>Call Adjustments</fullName>
            </value>
            <value>
                <fullName>Facility Adjustments</fullName>
            </value>
            <value>
                <fullName>Reciprocals</fullName>
            </value>
            <value>
                <fullName>Reciprocal Adjustments</fullName>
            </value>
            <value>
                <fullName>Facility Adjustment</fullName>
                <isActive>false</isActive>
                <label>Facility Adjustment</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
            <value>
                <fullName>Service Adjustment</fullName>
                <isActive>false</isActive>
                <label>Service Adjustment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>