unpackaged/main/default/objects/Invoice__c/recordTypes/ERS.recordType-meta.xml
<RecordType>
    <fullName>ERS</fullName>
    <active>true</active>
    <label>ERS</label>
</RecordType>