unpackaged/main/default/objects/Invoice__c/recordTypes/Facility_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Facility_Adjustment</fullName>
    <active>true</active>
    <label>Facility Adjustment</label>
</RecordType>