unpackaged/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Plus_Cost__c</columns>
    <columns>Premier_Cost__c</columns>
    <columns>RV_Cost__c</columns>
    <columns>Other_Cost__c</columns>
    <columns>Total_Tax__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Facility_Adjustment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>IN#03693045</value>
    </filters>
    <label>All</label>
</ListView>