unpackaged/main/default/objects/Invoice__c/listViews/ERS_Reciprocal.listView-meta.xml
<ListView>
    <fullName>ERS_Reciprocal</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Basic_Cost__c</columns>
    <columns>Plus_Cost__c</columns>
    <columns>Premier_Cost__c</columns>
    <columns>RV_Cost__c</columns>
    <columns>Total_Tax__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>ERS Calls,Call Adjustments,Reciprocals,Reciprocal Adjustments</value>
    </filters>
    <label>ERS + Reciprocal</label>
</ListView>