unpackaged/main/default/objects/Invoice__c/listViews/Missing_FA_s.listView-meta.xml
<ListView>
    <fullName>Missing_FA_s</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Facility_Adjustment__c</columns>
    <columns>Facility_Adjustment_Category__c</columns>
    <columns>Facility_Adjustment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>ERS Calls</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.ERS</value>
    </filters>
    <label>Missing FA&#39;s</label>
</ListView>